--- a/DormitoryForDelivery/DormitoryForDelivery/Views/storyboard/ChattingScreen.storyboard
+++ b/DormitoryForDelivery/DormitoryForDelivery/Views/storyboard/ChattingScreen.storyboard
@@ -122,15 +122,14 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="qui-p9-4Wl">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
-                        <navigationBarAppearance key="standardAppearance" backgroundImage="2">
+                        <navigationBarAppearance key="standardAppearance">
+                            <color key="backgroundColor" red="0.54108172659999998" green="0.6304117441" blue="0.8289681673" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <textAttributes key="titleTextAttributes">
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                             </textAttributes>
                         </navigationBarAppearance>
-                        <navigationBarAppearance key="scrollEdgeAppearance" backgroundImage="2">
-                            <textAttributes key="titleTextAttributes">
-                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                            </textAttributes>
+                        <navigationBarAppearance key="scrollEdgeAppearance">
+                            <color key="backgroundColor" red="0.54108172659999998" green="0.6304117441" blue="0.8289681673" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         </navigationBarAppearance>
                     </navigationBar>
                     <nil name="viewControllers"/>
@@ -468,7 +467,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="2" width="858" height="432"/>
         <image name="line.horizontal.3" catalog="system" width="128" height="64"/>
         <image name="message" catalog="system" width="128" height="113"/>
         <image name="message.fill" catalog="system" width="128" height="113"/>
