회원가입 이메일textField 글자수제한

--- a/DormitoryForDelivery/DormitoryForDelivery/Views/storyboard/HomeScreen.storyboard
+++ b/DormitoryForDelivery/DormitoryForDelivery/Views/storyboard/HomeScreen.storyboard
@@ -719,6 +719,9 @@
                                                 </constraints>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits"/>
+                                                <connections>
+                                                    <action selector="emailTextDidChanged:" destination="1ed-f6-hbT" eventType="editingChanged" id="8Cf-8g-Bw3"/>
+                                                </connections>
                                             </textField>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="@gs.cwnu.ac.kr" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LhS-OF-2xD">
                                                 <rect key="frame" x="276.5" y="129" width="102.5" height="40"/>
