--- a/DormitoryForDelivery/DormitoryForDelivery/Views/storyboard/HomeScreen.storyboard
+++ b/DormitoryForDelivery/DormitoryForDelivery/Views/storyboard/HomeScreen.storyboard
@@ -307,13 +307,13 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="774"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <sections>
-                            <tableViewSection id="pI5-GN-bgD">
+                            <tableViewSection id="X7r-Yr-nmD">
                                 <cells>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="475" id="wib-Bf-C5u">
-                                        <rect key="frame" x="0.0" y="44.5" width="414" height="475"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="300" id="wib-Bf-C5u">
+                                        <rect key="frame" x="0.0" y="44.5" width="414" height="300"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="wib-Bf-C5u" id="lUx-5q-l5h">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="475"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="300"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="치킨 시켜 먹을사람" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1Ox-t6-wur" userLabel="TItleLabel">
@@ -340,42 +340,58 @@
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="안ㅇ매ㅔㅌ추멭ㅁ츠ㅜㄴ믗['ㅁ니ㅡㅊㅁㄴ" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="TTx-WT-18b">
-                                                    <rect key="frame" x="20" y="151" width="374" height="313"/>
+                                                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="natural" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="orC-ao-Ab3">
+                                                    <rect key="frame" x="20" y="153" width="374" height="136"/>
                                                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                    <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                                                     <color key="textColor" systemColor="labelColor"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                     <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                                 </textView>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstAttribute="bottomMargin" secondItem="TTx-WT-18b" secondAttribute="bottom" id="AgK-UY-SW7"/>
                                                 <constraint firstAttribute="trailingMargin" secondItem="1Ox-t6-wur" secondAttribute="trailing" id="C77-Al-fXb"/>
                                                 <constraint firstItem="DA0-XO-j08" firstAttribute="top" secondItem="1Ox-t6-wur" secondAttribute="bottom" constant="25" id="Coa-KR-mVQ"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="orC-ao-Ab3" secondAttribute="bottom" id="D8S-kl-sdt"/>
                                                 <constraint firstItem="1Ox-t6-wur" firstAttribute="top" secondItem="lUx-5q-l5h" secondAttribute="topMargin" constant="30" id="DmH-qB-Sp2"/>
-                                                <constraint firstItem="TTx-WT-18b" firstAttribute="top" secondItem="DA0-XO-j08" secondAttribute="bottom" constant="34" id="G2d-Zc-Htu"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="orC-ao-Ab3" secondAttribute="trailing" id="GNI-vk-cK4"/>
                                                 <constraint firstItem="u0c-DX-G1q" firstAttribute="leading" secondItem="lUx-5q-l5h" secondAttribute="leadingMargin" id="SLB-u6-7O2"/>
-                                                <constraint firstAttribute="trailingMargin" secondItem="TTx-WT-18b" secondAttribute="trailing" id="U8W-xA-3F0"/>
+                                                <constraint firstItem="orC-ao-Ab3" firstAttribute="top" secondItem="DA0-XO-j08" secondAttribute="bottom" constant="36" id="aBY-w4-Qcy"/>
                                                 <constraint firstItem="1Ox-t6-wur" firstAttribute="leading" secondItem="lUx-5q-l5h" secondAttribute="leadingMargin" id="cnh-mc-NP8"/>
+                                                <constraint firstItem="orC-ao-Ab3" firstAttribute="leading" secondItem="lUx-5q-l5h" secondAttribute="leadingMargin" id="kZW-oO-0rj"/>
                                                 <constraint firstItem="DA0-XO-j08" firstAttribute="leading" secondItem="u0c-DX-G1q" secondAttribute="trailing" constant="25" id="sYV-GE-qDs"/>
                                                 <constraint firstAttribute="trailingMargin" secondItem="DA0-XO-j08" secondAttribute="trailing" constant="140" id="ssS-HX-jdZ"/>
                                                 <constraint firstItem="u0c-DX-G1q" firstAttribute="top" secondItem="1Ox-t6-wur" secondAttribute="bottom" constant="25" id="vBr-Za-rdq"/>
-                                                <constraint firstItem="TTx-WT-18b" firstAttribute="leading" secondItem="lUx-5q-l5h" secondAttribute="leadingMargin" id="zwk-Xp-8Qo"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="897-2n-pE7">
-                                        <rect key="frame" x="0.0" y="519.5" width="414" height="43.5"/>
+                                        <rect key="frame" x="0.0" y="344.5" width="414" height="43.5"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="897-2n-pE7" id="C2z-gy-IKa">
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="r8h-Lk-8Iw">
+                                                    <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                </view>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="r8h-Lk-8Iw" firstAttribute="leading" secondItem="C2z-gy-IKa" secondAttribute="leading" id="4kv-Ud-WHd"/>
+                                                <constraint firstAttribute="trailing" secondItem="r8h-Lk-8Iw" secondAttribute="trailing" id="HgG-8s-cQq"/>
+                                                <constraint firstItem="r8h-Lk-8Iw" firstAttribute="top" secondItem="C2z-gy-IKa" secondAttribute="top" id="Jpn-Nc-QMH"/>
+                                                <constraint firstAttribute="bottom" secondItem="r8h-Lk-8Iw" secondAttribute="bottom" id="tGm-pY-TpN"/>
+                                            </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                 </cells>
                             </tableViewSection>
                         </sections>
                     </tableView>
+                    <connections>
+                        <outlet property="postTextView" destination="orC-ao-Ab3" id="zmq-gu-x4n"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Mby-RL-OkO" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
